--- a/xmas2020/Cargo.toml
+++ b/xmas2020/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Alessandro Candido <candido.ale@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 aocinput = { path = "../aocinput" }
+itertools = "0.9.0"
